--- a/registry-service.properties
+++ b/registry-service.properties
@@ -1,3 +1,5 @@
-cloud.config.uri=http://localhost:8081
-cloud.config.username= root
-cloud.config.password= s3cr3t
+server.port=8099
+eureka.instance.hostname=localhost
+eureka.client.registerWithEureka=false
+eureka.client.fethRegistry=false
+eureka.client.serviceUrl.defaultZone=http//${eureka.instance.hostname}:${server.port=8099}/eureka/
