--- a/registry-service.properties
+++ b/registry-service.properties
@@ -3,5 +3,5 @@ eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=false
 eureka.client.fethRegistry=false
 eureka.client.serviceUrl.defaultZone=http//${eureka.instance.hostname}:${server.port=8099}/eureka/
-spring.config.import=optional:configserver:
+pring.cloud.config.enabled=false
 
